Added new project files

--- a/notebooks/joining_data.ipynb
+++ b/notebooks/joining_data.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# PLEASE CONSIDER:\n",
+    "# JOINS HAVE BEEN SUCCESSFULLY CONDUCTED AND ARE LEFT IN TO DEMONSTRATE PREVIOUS SUBMISSIONS\n",
+    "# JOINS ARE EXCLUDED FROM USE IN CURRENT SUBMISSION DUE TO YELP API LIMITATIONS"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
